[IOUtils] Prevent exceptions on Windows when reading the file